<resources>
    <string name="app_name">Shop Ihh</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_telp">No. Telp</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="pria">Pria</string>
    <string name="perempuan">Perempuan</string>

    <string name="title_activity_home_">Home_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="v1_0_0">V1.0.0</string>
    <string name="email_info">danielkelvin084@gmail.com</string>
    <string name="instragam_info">_achristx</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="JK">
        <item>Pria</item>
        <item>Perempuan</item>
    </string-array>
</resources>