<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"
    android:scrollbars="vertical"
    tools:context=".Login.SignUpActivity">
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:background="#fff"
        android:padding="20dp"
        android:elevation="1dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edSignUp_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/username_icon"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edSignUp_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/password_icon"
                        android:hint="@string/password"
                        android:drawableRight="@drawable/view_notactive_icon"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edSignUp_Nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/username_icon"
                    android:hint="@string/nama_lengkap"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jenis Kelamin :"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbSignUp_Pria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pria"/>

                <RadioButton
                    android:id="@+id/rbSignUp_Perempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perempuan"
                    android:layout_marginLeft="5dp"/>

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edSignUp_NoTelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/telepon_icon"
                    android:hint="@string/no_telp"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edSignUp_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email_icon"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edSignUp_Alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/alamat_icon"
                    android:hint="@string/alamat"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignUp_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:background="@drawable/background_profile"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_margin="20dp"/>
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/background_profile"
        android:layout_marginTop="46dp"
        android:layout_centerHorizontal="true"
        android:elevation="2dp"
        android:src="@drawable/profile_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Your Soph Ihh"
        android:textColor="#FFF"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="15dp"/>


</RelativeLayout>